methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:37: error: Unmatched closing brace '}' ignored here
}
^